attempted aligning side videos in desktop mode. Not working correctly. needed more time

--- a/sprint-1/src/components/video-list/VideoList.scss
+++ b/sprint-1/src/components/video-list/VideoList.scss
@@ -1,5 +1,11 @@
 @import '../../styles/mixins';
 
+.main-parent {
+
+    @include desktop {
+        display: flex;
+    }
+}
 .side-videos{
 
     &__heading { 
